unpackaged/main/default/objects/UniqueEntry__Batch_Settings__c/UniqueEntry__Batch_Settings__c.object-meta.xml
<CustomObject>
    <label>Batch Settings</label>
    <nameField>
        <label>Batch Settings Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Batch Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>