unpackaged/main/default/objects/UniqueEntry__Batch_Settings__c/fields/UniqueEntry__API_Key__c.field-meta.xml
<CustomField>
    <fullName>UniqueEntry__API_Key__c</fullName>
    <label>API Key</label>
    <length>200</length>
    <type>Text</type>
</CustomField>