unpackaged/main/default/objects/UniqueEntry__Batch_Settings__c/fields/UniqueEntry__API_Status__c.field-meta.xml
<CustomField>
    <fullName>UniqueEntry__API_Status__c</fullName>
    <label>API Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>