unpackaged/main/default/objects/UniqueEntry__Batch_Settings__c/fields/UniqueEntry__Base_API__c.field-meta.xml
<CustomField>
    <fullName>UniqueEntry__Base_API__c</fullName>
    <label>Base API</label>
    <length>255</length>
    <type>Text</type>
</CustomField>