unpackaged/main/default/objects/UniqueEntry__Batch_Settings__c/fields/UniqueEntry__Enabled_Triggers__c.field-meta.xml
<CustomField>
    <fullName>UniqueEntry__Enabled_Triggers__c</fullName>
    <label>Enabled_Triggers</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>