unpackaged/main/default/objects/UniqueEntry__Batch_Settings__c/fields/UniqueEntry__Job_Every_Time__c.field-meta.xml
<CustomField>
    <fullName>UniqueEntry__Job_Every_Time__c</fullName>
    <label>Job Every Time</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>