unpackaged/main/default/objects/UniqueEntry__Batch_Settings__c/fields/UniqueEntry__Job_Frequency__c.field-meta.xml
<CustomField>
    <fullName>UniqueEntry__Job_Frequency__c</fullName>
    <label>Job Frequency</label>
    <length>100</length>
    <type>Text</type>
</CustomField>