unpackaged/main/default/objects/UniqueEntry__Batch_Settings__c/fields/UniqueEntry__Job_Process_Count__c.field-meta.xml
<CustomField>
    <fullName>UniqueEntry__Job_Process_Count__c</fullName>
    <label>Job Process Count</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>