unpackaged/main/default/objects/UniqueEntry__Batch_Settings__c/fields/UniqueEntry__Re_Evaluate_Count__c.field-meta.xml
<CustomField>
    <fullName>UniqueEntry__Re_Evaluate_Count__c</fullName>
    <label>Re-Evaluate Count</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>