unpackaged/main/default/objects/UniqueEntry__Batch_Settings__c/fields/UniqueEntry__Record_Process_Count__c.field-meta.xml
<CustomField>
    <fullName>UniqueEntry__Record_Process_Count__c</fullName>
    <label>Record Process Count</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>